Part_1/exercise 1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  selector:
    app: pingpong-dep
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 8080
  type: ClusterIP
